@@ -1,70 +1,0 @@
-#! /usr/bin/env python
-# This file is part of khmer, https://github.com/dib-lab/khmer/, and is
-# Copyright (C) 2010-2015, Michigan State University.
-# Copyright (C) 2015, The Regents of the University of California.
-#
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions are
-# met:
-#
-#     * Redistributions of source code must retain the above copyright
-#       notice, this list of conditions and the following disclaimer.
-#
-#     * Redistributions in binary form must reproduce the above
-#       copyright notice, this list of conditions and the following
-#       disclaimer in the documentation and/or other materials provided
-#       with the distribution.
-#
-#     * Neither the name of the Michigan State University nor the names
-#       of its contributors may be used to endorse or promote products
-#       derived from this software without specific prior written
-#       permission.
-#
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-# HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-#
-# Contact: khmer-project@idyll.org
-from __future__ import division
-from __future__ import print_function
-import sys
-
-def main():
-    n = 0
-    countSum = [0] * 255
-    countN = [0] * 255
-
-    freqfile = sys.argv[1]
-
-    print('opening .freq file:', freqfile, file=sys.stderr)
-    fd = open(freqfile)
-    for n, line in enumerate(fd):
-        if n % 100000 == 0:
-            print('...', n, file=sys.stderr)
-
-        tok = line.split()
-
-        for i in range(len(tok)):
-            countSum[i] += int(tok[i])
-            countN[i] += 1
-
-    print('summarizing.', file=sys.stderr)
-    y = [0.0] * len(countSum)
-
-    for i in range(len(countSum)):
-        if countN[i]:
-            y[i] = float(countSum[i]) / float(countN[i])
-
-    for n, i in enumerate(y):
-        print(n, i)
-
-if __name__ == '__main__':
-    main()
